[metadata]
name = donkeycar_pypi
version = attr: donkeycar.__version__
author = Will Roscoe, Adam Conway, Tawn Kramer
url = https://github.com/autorope/donkeycar
description = Self driving library for python.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = selfdriving cars donkeycar diyrobocars
license = MIT
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find_namespace:
zip_safe = True
include_package_data = True
python_requires = >=3.8, <=3.9
install_requires =
    numpy
    pillow
    docopt
    tornado
    requests
    PrettyTable
    paho-mqtt
    simple_pid
    progress
    typing_extensions
    pyfiglet
    psutil
    pynmea2
    pyserial
    utm
    pandas
    pyyaml

[options.extras_require]
pi = 
    picamera2
    Adafruit_PCA9685
    adafruit-circuitpython-ssd1306
    adafruit-circuitpython-rplidar
    RPi.GPIO
    #tensorflow @ https://github.com/PINTO0309/Tensorflow-bin/releases/download/v2.9.0/tensorflow-2.9.0-cp39-none-linux_aarch64.whl

nano45 =
    Adafruit_PCA9685
    adafruit-circuitpython-ssd1306
    adafruit-circuitpython-rplidar
    Jetson.GPIO
    matplotlib

nano =
    Adafruit_PCA9685
    adafruit-circuitpython-ssd1306
    adafruit-circuitpython-rplidar
    Jetson.GPIO
    matplotlib
    kivy-jetson
    plotly

pc =
    tensorflow==2.9
    matplotlib
    kivy==2.1
    pandas
    plotly
    albumentations

dev =
    pytest
    pytest-cov
    responses
    mypy

torch =
    pytorch
    torchvision==0.12
    torchaudio
    fastai


[options.package_data]
donkeycar = *.html, *.ini, *.tar.gz, *.txt

[options.entry_points]
console_scripts =
    donkey = donkeycar.management.base:execute_from_command_line