[metadata]
name = donkeycar
version = attr: donkeycar.__version__
author = Will Roscoe, Adam Conway, Tawn Kramer
url = https://github.com/autorope/donkeycar
description = Self driving library for python.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = selfdriving cars donkeycar diyrobocars
license = MIT
classifiers =
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    Development Status :: 4 - Beta
    # Indicate who your project is intended for
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find_namespace:
zip_safe = True
include_package_data = True
python_requires = >=3.8,<4
install_requires =
    numpy
    pillow
    docopt
    tornado
    requests
    PrettyTable
    paho-mqtt
    simple_pid
    progress
    typing_extensions
    pyfiglet
    psutil
    pynmea2
    pyserial
    utm
    pandas
    pyyaml

[options.extras_require]
pi = 
    picamera2
    Adafruit_PCA9685
    adafruit-circuitpython-ssd1306
    adafruit-circuitpython-rplidar
    RPi.GPIO
    tensorflow-aarch64==2.15
    opencv-contrib-python

nano =
    Adafruit_PCA9685
    adafruit-circuitpython-ssd1306
    adafruit-circuitpython-rplidar
    Jetson.GPIO
    numpy==1.23
    matplotlib==3.7
    kivy==2.1
    plotly
    pandas==2.0

pc =
    tensorflow==2.9
    matplotlib
    kivy==2.1
    pandas
    plotly
    albumentations

macos =
    tensorflow-macos==2.9
    matplotlib
    kivy==2.1
    pandas
    plotly
    albumentations

dev =
    pytest
    pytest-cov
    responses
    mypy

torch =
    pytorch
    torchvision==0.12
    torchaudio
    fastai


[options.package_data]
* = *.html, *.ini, *.txt, *.kv

[options.entry_points]
console_scripts =
    donkey = donkeycar.management.base:execute_from_command_line
